--- a/core/src/main/res/menu/xui_menu_fragment_list.xml
+++ b/core/src/main/res/menu/xui_menu_fragment_list.xml
@@ -6,7 +6,7 @@
         android:id="@+id/menu_list_search"
         android:icon="@drawable/ic_action_search"
         android:orderInCategory="1"
-        android:title="@string/xui_menu_fragment_debt_list_search"
+        android:title="@string/xui_menu_list_search"
         app:showAsAction="ifRoom" />
 
     <!-- Used to show collapsible SearchView -->
@@ -14,7 +14,7 @@
         android:id="@+id/menu_list_search"
         android:icon="@drawable/ic_action_search"
         android:orderInCategory="1"
-        android:title="@string/xui_menu_fragment_debt_list_search"
+        android:title="@string/xui_menu_list_search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />-->
 
@@ -22,21 +22,20 @@
         android:id="@+id/menu_list_sort"
         android:icon="@drawable/ic_action_sort"
         android:orderInCategory="10"
-        android:title="@string/xui_menu_fragment_debt_list_sort"
+        android:title="@string/xui_menu_list_sort"
         app:showAsAction="ifRoom|withText" />
 
     <item
-        android:id="@+id/menu_item_menu_fragment_list_filter"
+        android:id="@+id/menu_list_filter"
         android:icon="@drawable/ic_action_filter"
         android:orderInCategory="11"
-        android:title="@string/xui_menu_fragment_debt_list_filter"
+        android:title="@string/xui_menu_list_filter"
         app:showAsAction="ifRoom|withText" />
 
     <item
         android:id="@+id/menu_list_refresh"
         android:icon="@drawable/ic_action_refresh"
         android:orderInCategory="12"
-        android:title="@string/xui_menu_fragment_home_refresh"
+        android:title="@string/xui_menu_list_refresh"
         app:showAsAction="ifRoom|withText" />
-
 </menu>
