--- a/core/src/main/res/layout/data_table.xml
+++ b/core/src/main/res/layout/data_table.xml
@@ -100,6 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
+                android:background="@color/colorTransparent"
                 android:contentDescription="@string/xui_data_table_goto_page"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="@id/page"
@@ -139,6 +140,7 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/xui_menu_icon_width"
             android:adjustViewBounds="true"
+            android:background="@color/colorTransparent"
             android:contentDescription="@string/xui_data_table_button_previous"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -165,6 +167,7 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/xui_menu_icon_width"
             android:adjustViewBounds="true"
+            android:background="@color/colorTransparent"
             android:contentDescription="@string/xui_data_table_button_next"
             android:scaleType="fitXY"
             android:text="@string/xui_data_table_button_next"
