--- a/core/src/main/res/values/dimens.xml
+++ b/core/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="xui_data_table_default_text_size">14sp</dimen>
 
     <dimen name="xui_menu_icon_width">24dp</dimen>
+    <dimen name="xui_fab_margin">16dp</dimen>
 </resources>
